add mongodb support

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -14,34 +14,34 @@
     ]
   },
   "User": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": false
   },
   "AccessToken": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": false
   },
   "ACL": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": false
   },
   "RoleMapping": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": false,
     "options": {
       "strictObjectIDCoercion": true
     }
   },
   "Role": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": false
   },
   "Member": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": true
   },
   "Team": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": true
   }
 }
