added Request to manage join and invite

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -43,5 +43,9 @@
   "Team": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "Request": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
